Add jvm arg: --enable-preview
Allow sealed classes and interfaces from Java 16 preview.