@@ -1,6 +1,4 @@
-plugins {
-    java
-}
+plugins { java }
 
 group = "io.github.tobiasbriones.cp"
 version = "1.0-SNAPSHOT"
@@ -18,4 +16,12 @@ dependencies {
 
 tasks.getByName<Test>("test") {
     useJUnitPlatform()
+}
+
+tasks.withType<JavaCompile>().all {
+    options.compilerArgs = listOf("--enable-preview")
+}
+
+tasks.withType<Test>().all {
+    jvmArgs("--enable-preview")
 }
